# ACM

./: .gitignore  CMakeLists.txt  README.md
AtCoder/AtCoder Beginner Contest 374/: ABC374A.cpp  ABC374B.cpp  ABC374C.cpp
AtCoder/AtCoder Beginner Contest 382/: ABC382A.cpp  ABC382B.cpp  ABC382C.cpp
Codeforces/Codeforces Round 479 (Div. 3)/: CF977A.cpp  CF977B.cpp  CF977C.cpp  CF977D.cpp
Codeforces/Codeforces Round 640 (Div. 4)/: CF1352A.cpp  CF1352B.cpp  CF1352C.cpp  CF1352D.cpp  CF1352E.cpp  CF1352F.cpp  CF1352G.cpp
Codeforces/Codeforces Round 784 (Div. 4)/: CF1669A.cpp  CF1669B.cpp  CF1669C.cpp  CF1669D.cpp  CF1669E.cpp  CF1669F.cpp  CF1669G.cpp  CF1669H.cpp
Codeforces/Codeforces Round 790 (Div. 4)/: CF1676A.cpp  CF1676B.cpp  CF1676C.cpp  CF1676D.cpp  CF1676E.cpp  CF1676F.cpp  CF1676G.cpp  CF1676H1.cpp  CF1676H2.cpp
Codeforces/Codeforces Round 981 (Div. 3)/: CF2033A.cpp  CF2033B.cpp  CF2033C.cpp  CF2033D.cpp  CF2033E.cpp  CF2033F.cpp  CF2033G.cpp
Codeforces/Codeforces Round 984 (Div. 3)/: CF2036A.cpp  CF2036B.cpp  CF2036C.cpp  CF2036D.cpp  CF2036E.cpp  CF2036F.cpp  CF2036G.cpp
Codeforces/Codeforces Round 989 (Div. 2)/: CF2034A.cpp  CF2034B.cpp  CF2034C.cpp  CF2034D.cpp
Codeforces/Codeforces Round 990 (Div. 2)/: CF2047A.cpp  CF2047B.cpp  CF2047C.cpp  CF2047D.cpp
Codeforces/Codeforces Round 991 (Div. 3)/: CF2050A.cpp  CF2050B.cpp  CF2050C.cpp  CF2050D.cpp  CF2050E.cpp
Codeforces/Educational Codeforces Round 168 (Rated for Div. 2)/: CF1997A.cpp  CF1997B.cpp
Codeforces/Educational Codeforces Round 172 (Rated for Div. 2)/: CF2042A.cpp  CF2042B.cpp  CF2042C.cpp
HDU/: HDU1029.cpp  HDU2072.cpp  HDU5120.cpp
Kattis/: Kattis-ballotboxes.cpp
LeetCode/: LeetCode1328.cpp  LeetCode1338.cpp  LeetCode1366.cpp  LeetCode1367.cpp  LeetCode1387.cpp  LeetCode17.cpp  LeetCode1705.cpp  LeetCode1812.cpp  LeetCode2056.cpp  LeetCode2270.cpp  LeetCode2274.cpp  LeetCode2275.cpp  LeetCode2588.cpp  LeetCode2597.cpp  LeetCode2717.cpp  LeetCode2931.cpp  LeetCode3001.cpp  LeetCode3046.cpp  LeetCode3065.cpp  LeetCode3066.cpp  LeetCode3083.cpp  LeetCode3095.cpp  LeetCode3206.cpp  LeetCode3208.cpp  LeetCode3232.cpp  LeetCode3250.cpp  LeetCode3251.cpp  LeetCode3270.cpp  LeetCode3274.cpp  LeetCode3280.cpp  LeetCode51.cpp  LeetCode52.cpp  LeetCode688.cpp  LeetCode782.cpp  LeetCode999.cpp
LeetCode/ProblemSet/Volume (1-99)/LeetCode76/: LeetCode76-Solution-01.go
LeetCode/ProblemSet/Volume (1000-1099)/LeetCode1080/: LeetCode1080-Solution-01.cpp  LeetCode1080-Solution-01.go  LeetCode1080-Solution-01.py  LeetCode1080-Solution-02.cpp  LeetCode1080-Solution-02.go  LeetCode1080-Solution-02.py
LeetCode/ProblemSet/Volume (1200-1299)/LeetCode1234/: LeetCode1234-Solution-01.go
LeetCode/ProblemSet/Volume (1200-1299)/LeetCode1260/: LeetCode1260-Solution-01.cpp  LeetCode1260-Solution-01.go  LeetCode1260-Solution-01.py
LeetCode/ProblemSet/Volume (1200-1299)/LeetCode1291/: LeetCode1291-Solution-01.cpp  LeetCode1291-Solution-01.go  LeetCode1291-Solution-01.py
LeetCode/ProblemSet/Volume (1300-1399)/LeetCode1331/: LeetCode1331-Solution-01.cpp  LeetCode1331-Solution-01.go  LeetCode1331-Solution-01.py
LeetCode/ProblemSet/Volume (1300-1399)/LeetCode1358/: LeetCode1358-Solution-01.go
LeetCode/ProblemSet/Volume (1900-1999)/LeetCode1979/: LeetCode1979-Solution-01.cpp  LeetCode1979-Solution-01.go  LeetCode1979-Solution-01.py
LeetCode/ProblemSet/Volume (2300-2399)/LeetCode2302/: LeetCode2302-Solution-01.go
LeetCode/ProblemSet/Volume (2700-2799)/LeetCode2799/: LeetCode2799-Solution-01.go
LeetCode/ProblemSet/Volume (2800-2899)/LeetCode2875/: LeetCode2875-Solution-01.go
LeetCode/ProblemSet/Volume (2900-2999)/LeetCode2962/: LeetCode2962-Solution-01.go
LeetCode/ProblemSet/Volume (300-399)/LeetCode316/: LeetCode316-Solution-01.cpp  LeetCode316-Solution-01.go  LeetCode316-Solution-01.py  LeetCode316-Solution-02.cpp  LeetCode316-Solution-02.go  LeetCode316-Solution-02.py
LeetCode/ProblemSet/Volume (3200-3299)/LeetCode3258/: LeetCode3258-Solution-01.go
LeetCode/ProblemSet/Volume (3300-3399)/LeetCode3325/: LeetCode3325-Solution-01.go
LeetCode/ProblemSet/Volume (3300-3399)/LeetCode3336/: LeetCode3336-Solution-01.cpp  LeetCode3336-Solution-01.go  LeetCode3336-Solution-01.py
LeetCode/ProblemSet/Volume (3400-3499)/LeetCode3499/: LeetCode3499-Solution-01.cpp  LeetCode3499-Solution-01.go  LeetCode3499-Solution-01.py
LeetCode/ProblemSet/Volume (3500-3599)/LeetCode3513/: LeetCode3513-Solution-01.cpp  LeetCode3513-Solution-01.go  LeetCode3513-Solution-01.py  LeetCode3513-Solution-02.cpp
LeetCode/ProblemSet/Volume (3500-3599)/LeetCode3532/: LeetCode3532-Solution-01.cpp  LeetCode3532-Solution-01.go  LeetCode3532-Solution-01.py
LeetCode/ProblemSet/Volume (3600-3699)/LeetCode3658/: LeetCode3658-Solution-01.cpp  LeetCode3658-Solution-01.go  LeetCode3658-Solution-01.py
LeetCode/ProblemSet/Volume (3700-3799)/LeetCode3737/: LeetCode3737-Solution-01.cpp  LeetCode3737-Solution-01.go  LeetCode3737-Solution-01.py
LeetCode/ProblemSet/Volume (3700-3799)/LeetCode3754/: LeetCode3754-Solution-01.cpp  LeetCode3754-Solution-01.go  LeetCode3754-Solution-01.py
LeetCode/ProblemSet/Volume (3700-3799)/LeetCode3756/: LeetCode3756-Solution-01.cpp  LeetCode3756-Solution-01.go  LeetCode3756-Solution-01.py
LeetCode/ProblemSet/Volume (3800-3899)/LeetCode3867/: LeetCode3867-Solution-01.cpp  LeetCode3867-Solution-01.go  LeetCode3867-Solution-01.py
POJ/: POJ1064.cpp  POJ2456.cpp  POJ3104.cpp
UVA/Volume 1 (100-199)/: UVA123.cpp
UVA/Volume 100 (10000-10099)/: UVA10008.cpp
UVA/Volume 101 (10100-10199)/: UVA10114.cpp  UVA10170.cpp
UVA/Volume 103 (10300-10399)/: UVA10341.cpp
UVA/Volume 104 (10400-10499)/: UVA10474.cpp
UVA/Volume 118 (11800-11899)/: UVA11809.cpp  UVA11881.cpp
UVA/Volume 119 (11900-11999)/: UVA11935.cpp
UVA/Volume 120 (12000-12099)/: UVA12032.cpp
UVA/Volume 121 (12100-12199)/: UVA12190.cpp
UVA/Volume 17 (1700-1799)/: UVA1753.cpp
UVA/Volume 3 (300-399)/: UVA358.cpp  UVA391.cpp
UVA/Volume 4 (400-499)/: UVA465.cpp
UVA/Volume 5 (500-599)/: UVA594.cpp
(+15 files in other folders)
