cmake_minimum_required(VERSION 3.29)
project(ACM)

set(CMAKE_CXX_STANDARD 26)

add_executable(ACM main.cpp)

add_executable(CF1352A "Codeforces/Codeforces Round 640 (Div. 4)/CF1352A.cpp")
add_executable(CF1352B "Codeforces/Codeforces Round 640 (Div. 4)/CF1352B.cpp")
add_executable(CF1352C "Codeforces/Codeforces Round 640 (Div. 4)/CF1352C.cpp")
add_executable(CF1352D "Codeforces/Codeforces Round 640 (Div. 4)/CF1352D.cpp")
add_executable(CF1352E "Codeforces/Codeforces Round 640 (Div. 4)/CF1352E.cpp")
add_executable(CF1352F "Codeforces/Codeforces Round 640 (Div. 4)/CF1352F.cpp")
add_executable(CF1352G "Codeforces/Codeforces Round 640 (Div. 4)/CF1352G.cpp")

add_executable(CF1669A "Codeforces/Codeforces Round 784 (Div. 4)/CF1669A.cpp")
add_executable(CF1669B "Codeforces/Codeforces Round 784 (Div. 4)/CF1669B.cpp")
add_executable(CF1669C "Codeforces/Codeforces Round 784 (Div. 4)/CF1669C.cpp")
add_executable(CF1669D "Codeforces/Codeforces Round 784 (Div. 4)/CF1669D.cpp")
add_executable(CF1669E "Codeforces/Codeforces Round 784 (Div. 4)/CF1669E.cpp")
add_executable(CF1669F "Codeforces/Codeforces Round 784 (Div. 4)/CF1669F.cpp")
add_executable(CF1669G "Codeforces/Codeforces Round 784 (Div. 4)/CF1669G.cpp")

add_executable(CF1997A "Codeforces/Educational Codeforces Round 168 (Rated for Div. 2)/CF1997A.cpp")
add_executable(CF1997B "Codeforces/Educational Codeforces Round 168 (Rated for Div. 2)/CF1997B.cpp")

add_executable(ABC374A "AtCoder/AtCoder Beginner Contest 374/ABC374A.cpp")
add_executable(ABC374B "AtCoder/AtCoder Beginner Contest 374/ABC374B.cpp")
add_executable(ABC374C "AtCoder/AtCoder Beginner Contest 374/ABC374C.cpp")

add_executable(CF1676A "Codeforces/Codeforces Round 790 (Div. 4)/CF1676A.cpp")
add_executable(CF1676B "Codeforces/Codeforces Round 790 (Div. 4)/CF1676B.cpp")
add_executable(CF1676C "Codeforces/Codeforces Round 790 (Div. 4)/CF1676C.cpp")
add_executable(CF1676D "Codeforces/Codeforces Round 790 (Div. 4)/CF1676D.cpp")
add_executable(CF1676E "Codeforces/Codeforces Round 790 (Div. 4)/CF1676E.cpp")
add_executable(CF1676F "Codeforces/Codeforces Round 790 (Div. 4)/CF1676F.cpp")
add_executable(CF1676G "Codeforces/Codeforces Round 790 (Div. 4)/CF1676G.cpp")
add_executable(CF1676H1 "Codeforces/Codeforces Round 790 (Div. 4)/CF1676H1.cpp")
add_executable(CF1676H2 "Codeforces/Codeforces Round 790 (Div. 4)/CF1676H2.cpp")

add_executable(UVA10170 "UVA/Volume 101 (10100-10199)/UVA10170.cpp")