cmake_minimum_required(VERSION 3.29)
project(ACM)

set(CMAKE_CXX_STANDARD 23)

add_executable(main main.cpp)

add_executable(CF1997A "Codeforces/Educational Codeforces Round 168 (Rated for Div. 2)/CF1997A.cpp")
add_executable(CF1997B "Codeforces/Educational Codeforces Round 168 (Rated for Div. 2)/CF1997B.cpp")

add_executable(CF977A "Codeforces/Codeforces Round 479 (Div. 3)/CF977A.cpp")
add_executable(CF977B "Codeforces/Codeforces Round 479 (Div. 3)/CF977B.cpp")
add_executable(CF977C "Codeforces/Codeforces Round 479 (Div. 3)/CF977C.cpp")
add_executable(CF977D "Codeforces/Codeforces Round 479 (Div. 3)/CF977D.cpp")

add_executable(CF1352A "Codeforces/Codeforces Round 640 (Div. 4)/CF1352A.cpp")
add_executable(CF1352B "Codeforces/Codeforces Round 640 (Div. 4)/CF1352B.cpp")
add_executable(CF1352C "Codeforces/Codeforces Round 640 (Div. 4)/CF1352C.cpp")
add_executable(CF1352D "Codeforces/Codeforces Round 640 (Div. 4)/CF1352D.cpp")
add_executable(CF1352E "Codeforces/Codeforces Round 640 (Div. 4)/CF1352E.cpp")
add_executable(CF1352F "Codeforces/Codeforces Round 640 (Div. 4)/CF1352F.cpp")
add_executable(CF1352G "Codeforces/Codeforces Round 640 (Div. 4)/CF1352G.cpp")

add_executable(CF1669A "Codeforces/Codeforces Round 784 (Div. 4)/CF1669A.cpp")
add_executable(CF1669B "Codeforces/Codeforces Round 784 (Div. 4)/CF1669B.cpp")
add_executable(CF1669C "Codeforces/Codeforces Round 784 (Div. 4)/CF1669C.cpp")
add_executable(CF1669D "Codeforces/Codeforces Round 784 (Div. 4)/CF1669D.cpp")
add_executable(CF1669E "Codeforces/Codeforces Round 784 (Div. 4)/CF1669E.cpp")
add_executable(CF1669F "Codeforces/Codeforces Round 784 (Div. 4)/CF1669F.cpp")
add_executable(CF1669G "Codeforces/Codeforces Round 784 (Div. 4)/CF1669G.cpp")

add_executable(CF1676A "Codeforces/Codeforces Round 790 (Div. 4)/CF1676A.cpp")
add_executable(CF1676B "Codeforces/Codeforces Round 790 (Div. 4)/CF1676B.cpp")
add_executable(CF1676C "Codeforces/Codeforces Round 790 (Div. 4)/CF1676C.cpp")
add_executable(CF1676D "Codeforces/Codeforces Round 790 (Div. 4)/CF1676D.cpp")
add_executable(CF1676E "Codeforces/Codeforces Round 790 (Div. 4)/CF1676E.cpp")
add_executable(CF1676F "Codeforces/Codeforces Round 790 (Div. 4)/CF1676F.cpp")
add_executable(CF1676G "Codeforces/Codeforces Round 790 (Div. 4)/CF1676G.cpp")
add_executable(CF1676H1 "Codeforces/Codeforces Round 790 (Div. 4)/CF1676H1.cpp")
add_executable(CF1676H2 "Codeforces/Codeforces Round 790 (Div. 4)/CF1676H2.cpp")

add_executable(CF2033A "Codeforces/Codeforces Round 981 (Div. 3)/CF2033A.cpp")
add_executable(CF2033B "Codeforces/Codeforces Round 981 (Div. 3)/CF2033B.cpp")
add_executable(CF2033C "Codeforces/Codeforces Round 981 (Div. 3)/CF2033C.cpp")
add_executable(CF2033D "Codeforces/Codeforces Round 981 (Div. 3)/CF2033D.cpp")
add_executable(CF2033E "Codeforces/Codeforces Round 981 (Div. 3)/CF2033E.cpp")
add_executable(CF2033F "Codeforces/Codeforces Round 981 (Div. 3)/CF2033F.cpp")
add_executable(CF2033G "Codeforces/Codeforces Round 981 (Div. 3)/CF2033G.cpp")

add_executable(CF2036A "Codeforces/Codeforces Round 984 (Div. 3)/CF2036A.cpp")
add_executable(CF2036B "Codeforces/Codeforces Round 984 (Div. 3)/CF2036B.cpp")
add_executable(CF2036C "Codeforces/Codeforces Round 984 (Div. 3)/CF2036C.cpp")
add_executable(CF2036D "Codeforces/Codeforces Round 984 (Div. 3)/CF2036D.cpp")
add_executable(CF2036E "Codeforces/Codeforces Round 984 (Div. 3)/CF2036E.cpp")
add_executable(CF2036F "Codeforces/Codeforces Round 984 (Div. 3)/CF2036F.cpp")
add_executable(CF2036G "Codeforces/Codeforces Round 984 (Div. 3)/CF2036G.cpp")


add_executable(ABC374A "AtCoder/AtCoder Beginner Contest 374/ABC374A.cpp")
add_executable(ABC374B "AtCoder/AtCoder Beginner Contest 374/ABC374B.cpp")
add_executable(ABC374C "AtCoder/AtCoder Beginner Contest 374/ABC374C.cpp")


add_executable(HDU1029 HDU/HDU1029.cpp)
add_executable(HDU2072 HDU/HDU2072.cpp)
add_executable(HDU5120 HDU/HDU5120.cpp)

add_executable(POJ1064 POJ/POJ1064.cpp)
add_executable(POJ2456 POJ/POJ2456.cpp)
add_executable(POJ3104 POJ/POJ3104.cpp)

add_executable(UVA123 "UVA/Volume 1 (100-199)/UVA123.cpp")
add_executable(UVA358 "UVA/Volume 3 (300-399)/UVA358.cpp")
add_executable(UVA391 "UVA/Volume 3 (300-399)/UVA391.cpp")
add_executable(UVA465 "UVA/Volume 4 (400-499)/UVA465.cpp")
add_executable(UVA594 "UVA/Volume 5 (500-599)/UVA594.cpp")
add_executable(UVA1753 "UVA/Volume 17 (1700-1799)/UVA1753.cpp")
add_executable(UVA10008 "UVA/Volume 100 (10000-10099)/UVA10008.cpp")
add_executable(UVA10114 "UVA/Volume 101 (10100-10199)/UVA10114.cpp")
add_executable(UVA10170 "UVA/Volume 101 (10100-10199)/UVA10170.cpp")
add_executable(UVA10341 "UVA/Volume 103 (10300-10399)/UVA10341.cpp")
add_executable(UVA10474 "UVA/Volume 104 (10400-10499)/UVA10474.cpp")
add_executable(UVA11809 "UVA/Volume 118 (11800-11899)/UVA11809.cpp")
add_executable(UVA11881 "UVA/Volume 118 (11800-11899)/UVA11881.cpp")
add_executable(UVA11935 "UVA/Volume 119 (11900-11999)/UVA11935.cpp")
add_executable(UVA12032 "UVA/Volume 120 (12000-12099)/UVA12032.cpp")
add_executable(UVA12190 "UVA/Volume 121 (12100-12199)/UVA12190.cpp")

add_executable(Kattis-ballotboxes Kattis/Kattis-ballotboxes.cpp)


add_executable(AcWing-785-快速排序 AcWing/Tutorial/算法基础课/基础算法/快速排序/AcWing-785-快速排序.cpp)
add_executable(AcWing-786-第k个数 AcWing/Tutorial/算法基础课/基础算法/快速排序/AcWing-786-第k个数.cpp)
add_executable(AcWing-787-归并排序 AcWing/Tutorial/算法基础课/基础算法/归并排序/AcWing-787-归并排序.cpp)
add_executable(AcWing-788-逆序对的数量 AcWing/Tutorial/算法基础课/基础算法/归并排序/AcWing-788-逆序对的数量.cpp)
add_executable(AcWing-789-数的范围 AcWing/Tutorial/算法基础课/基础算法/二分/AcWing-789-数的范围.cpp)
add_executable(AcWing-790-数的三次方根 AcWing/Tutorial/算法基础课/基础算法/二分/AcWing-790-数的三次方根.cpp)
add_executable(AcWing-791-高精度加法 AcWing/Tutorial/算法基础课/基础算法/高精度/AcWing-791-高精度加法.cpp)
add_executable(AcWing-792-高精度减法 AcWing/Tutorial/算法基础课/基础算法/高精度/AcWing-792-高精度减法.cpp)
add_executable(AcWing-793-高精度乘法 AcWing/Tutorial/算法基础课/基础算法/高精度/AcWing-793-高精度乘法.cpp)
add_executable(AcWing-794-高精度除法 AcWing/Tutorial/算法基础课/基础算法/高精度/AcWing-794-高精度除法.cpp)

add_executable(CF2034C "Codeforces/Codeforces Round 989 (Div. 2)/CF2034C.cpp")
add_executable(CF2034B "Codeforces/Codeforces Round 989 (Div. 2)/CF2034B.cpp")
add_executable(CF2034A "Codeforces/Codeforces Round 989 (Div. 2)/CF2034A.cpp")
add_executable(CF2034D "Codeforces/Codeforces Round 989 (Div. 2)/CF2034D.cpp")

add_executable(CF2042A "Codeforces/Educational Codeforces Round 172 (Rated for Div. 2)/CF2042A.cpp")
add_executable(CF2042B "Codeforces/Educational Codeforces Round 172 (Rated for Div. 2)/CF2042B.cpp")
add_executable(CF2042C "Codeforces/Educational Codeforces Round 172 (Rated for Div. 2)/CF2042C.cpp")

add_executable(CF2047A "Codeforces/Codeforces Round 990 (Div. 2)/CF2047A.cpp")
add_executable(CF2047B "Codeforces/Codeforces Round 990 (Div. 2)/CF2047B.cpp")
add_executable(CF2047C "Codeforces/Codeforces Round 990 (Div. 2)/CF2047C.cpp")
add_executable(CF2047D "Codeforces/Codeforces Round 990 (Div. 2)/CF2047D.cpp")

add_executable(ABC382A "AtCoder/AtCoder Beginner Contest 382/ABC382A.cpp")
add_executable(ABC392B "AtCoder/AtCoder Beginner Contest 382/ABC382B.cpp")
add_executable(ABC382C "AtCoder/AtCoder Beginner Contest 382/ABC382C.cpp")
add_executable(CF2050A "Codeforces/Codeforces Round 991 (Div. 3)/CF2050A.cpp")
add_executable(CF2050B "Codeforces/Codeforces Round 991 (Div. 3)/CF2050B.cpp")
add_executable(CF2050C "Codeforces/Codeforces Round 991 (Div. 3)/CF2050C.cpp")
add_executable(CF2050D "Codeforces/Codeforces Round 991 (Div. 3)/CF2050D.cpp")
add_executable(CF2050E "Codeforces/Codeforces Round 991 (Div. 3)/CF2050E.cpp")